<resources>
    <string name="app_name">Shopelago</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">NOTIFIKASI</string>
    <string name="search">Cari di Shopelago</string>
    <string name="title_messages">Messages</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_cart">Cart</string>
    <string name="featured_product">Produk Unggulan</string>
    <string name="exclusive_partners">Exclusive Partners</string>
    <string name="see_all">Lihat Semua</string>
    <string name="color_choice">Pilihan Warna</string>
    <string name="title">Title</string>
    <string name="search_on_wishlist">Cari di Wishlist</string>
    <string name="delete">Hapus</string>
    <string name="buy">Beli</string>
    <string name="delete_from_wishlist">Hapus dari Wishlist ?</string>
    <string name="cancel">Batal</string>
    <string name="success_wishlist">Berhasil dimasukkan ke Keranjang</string>
    <string name="title_account">AKUN SAYA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="done">Selesai</string>
    <string name="order_date">Tanggal Pembelian</string>
    <string name="copy">Salin</string>
    <string name="courier">Kurir Pengiriman</string>
    <string name="receipt_no">Nomor Resi</string>
    <string name="delivery_courier">Kurir Pengiriman</string>
    <string name="delivery_address">Alamat Pengiriman</string>
    <string name="weight_total">Jumlah Berat</string>
    <string name="delivery_fee">Ongkos Kirim</string>
    <string name="insurance_fee">Biaya Asuransi</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="total_price">Total Harga</string>
    <string name="another_product">Produk Lainnya</string>
    <string name="send">Sedang Dikirim</string>
    <string name="order_canceled">Pesanan Dibatalkan</string>
    <string name="cancel_payment">Batalkan</string>
    <string name="payment_detail">Detail Pembayaran</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="payment_method_button">Cara Pembayaran</string>
    <string name="invoice">Lihat Invoice</string>
    <string name="cancel_transaction">Batalkan Transaksi?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="payment_guide_message">Pastikan untuk tidak menginformasikan bukti dan data pembayaran kepada pihak manapun kecuali <b>Shopelago</b>.</string>
    <string name="payment_guide">Panduan Pembayaran</string>
    <string name="invoice_detail">Detail Tagihan</string>
    <string name="total_shopping">Total Belanja</string>
    <string name="products_purchased">Produk yang Dibeli</string>
    <string name="upgrade_premium">Upgrade Ke Premium</string>
    <string name="profile">Profil</string>
    <string name="purchase_list">Daftar Pembelian</string>
    <string name="income">Pendapatan</string>
    <string name="downlines">Downlines</string>
    <string name="my_wallet">Dompetku</string>
    <string name="logout">Logout</string>
    <string name="message">Pesan</string>
    <string name="unread_message">Belum Dibaca</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Terkirim</string>
    <string name="purchase">Pembelian</string>
    <string name="waiting_payment">Menunggu Pembayaran</string>
    <string name="waiting_confirmation">Menunggu Konfirmasi</string>
    <string name="order_detail">Detail Pesanan</string>
    <string name="order_processed">Pesanan Diproses</string>
    <string name="order_sent">Sedang Dikirim</string>
    <string name="order_arrived">Sampai Tujuan</string>
    <string name="search_on_inbox">Cari di Inbox</string>
    <string name="search_on_sent">Cari di Terkirim</string>
    <string name="tab_all">Semua</string>
    <string name="tab_product">Nama Produk</string>
    <string name="tab_shop">Nama Toko</string>
    <string name="load_more">Lebih Banyak..</string>
    <string name="title_waiting_payment">Menunggu Pembayaran</string>
    <string name="title_payment_guide">Panduan Pembayaran</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_purchase_list">Daftar Pembelian</string>
    <string name="product_desc">Deskripsi Produk</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="read_more">Read More</string>
    <string name="product_info">Informasi Produk</string>
    <string name="condition">Condition</string>
    <string name="insurance">Asuransi</string>
    <string name="min_purchase">Pembelian Minimum</string>
    <string name="category">Kategori</string>
    <string name="add_to_cart">Tambah ke Keranjang</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="title_buy_product">Beli Produk</string>
    <string name="total">Jumlah</string>
    <string name="notes">Catatan</string>
    <string name="title_add_to_cart">Tambah ke Keranjang</string>
    <string name="title_product_not_found">Product Not Found.</string>
    <string name="title_shop_not_found">Shop Not Found.</string>
    <string name="email_user_id">Email / User ID</string>
    <string name="password">Password</string>
    <string name="new_password">Password Baru</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="or">atau</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="login_with_google">Masuk dengan Google Account</string>
    <string name="dont_have_account">Belum mempunyai akun Shopelago ?</string>
    <string name="register">Daftar</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Ubah Password</string>
    <string name="forgot_password_instruction">Masukkan E-Mail terdaftar Anda untuk konfirmasi Reset Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="repeat_password">Ulangi Password</string>
    <string name="email">E-Mail</string>
    <string name="terms_and_conditions">Syarat dan Ketentuan</string>
    <string name="register_with_facebook">Daftar dengan Facebook</string>
    <string name="register_with_google">Daftar dengan Google Account</string>
    <string name="mandatory">Mandatory</string>
    <string name="loading">Loading, Please Wait..</string>
    <string name="error">Error</string>
    <string name="success_apply_premium">Apply Premium Success</string>
    <string name="error_conn">Error Conection</string>
    <string name="password_rule">Panjang Password 6 sampai 15 karakter</string>
    <string name="otp_code_verification">Kode Verifikasi</string>
    <string name="otp_code_instruction">Masukkan Kode Verifikasi yang telah dikirim ke E-Mail Anda</string>
    <string name="error_otp_code">Kode Verifikasi salah, periksa kembali E-Mail Anda</string>
    <string name="resend_otp_code">Kirim ulang Kode Verifikasi</string>
    <string name="invalid_repeat_password">Konfirmasi Password salah</string>


</resources>
