<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            android:padding="@dimen/activity_horizontal_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_large_margin"
                android:fontFamily="@font/proximanova_regular"
                android:text="@string/inbox"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                />

            <View style="@style/vertical_black_divider" />

            <TextView
                android:id="@+id/tvSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_large_margin"
                android:fontFamily="@font/proximanova_bold"
                android:text="@string/sent"
                android:textSize="14dp"
                android:textColor="@color/light_green"
                android:gravity="left"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_border"
            android:padding="@dimen/activity_horizontal_padding"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/shape_edittext"
                android:paddingLeft="@dimen/activity_horizontal_large_padding"
                android:hint="@string/search_on_sent"
                android:layout_marginBottom="@dimen/activity_vertical_small_margin"
                android:textSize="14sp"
                android:textColorHint="@color/dark_gray"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/rv_item_message"
                android:layout_marginBottom="@dimen/activity_vertical_small_margin" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>